# BackToBasics

./: .anjuta_sym_db.db  DEPENDS  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: Makefile  changelog.in  control.in
po/: POTFILES.in
spikes/vlc/: vlc  vlc.c  vlc.c~
src/: Makefile.am  Makefile.in  backtobasics  backtobasics.c  backtobasics.h  backtobasics.ui  backtobasics_bin.c  btb_play.c  btb_playlist.c  main.c  small.css  small_off.css  small_on.css
src/audio/: aodev.c  aodev.h  audio.c  audio.h  flac.c  flac.h  mp3.c  mp3.h  ogg.c  ogg.h  ripstream.c  ripstream.h
src/gui/: async_call.c  async_call.h  library_view.c  library_view.h  playlist_model.c  playlist_model.h  playlists_model.c  playlists_model.h  radio_view.c  radio_view.h  scanjob.c  scanjob.h  station_model.c  station_model.h  string_model.c  string_model.h
src/i18n/: i18n.c  i18n.h
src/lyrics/: lyrics.c  lyrics.h
src/metadata/: cue.c  cue.h  track.c  track.h  tracks_source.c  tracks_source.h
src/playlist/: playlist.c  playlist.h  playlist_player.c  playlist_player.h
src/share/applications/: backtobasics.desktop
src/share/menu/: backtobasics
src/share/pixmaps/: backtobasics-16.xpm  backtobasics.xpm
src/util/: config.c  config.h  image_fetcher.c  image_fetcher.h  simple_html.c  simple_html.h  webkitcookies.c  webkitcookies.h
